--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_VendorDefaultComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_VendorDefaultComponentPartial/Default.cshtml
@@ -1,28 +1,17 @@
-﻿<div class="container-fluid py-5">
+﻿@using MultiShop.DtoLayer.CatalogDtos.BrandDtos
+@model List<ResultBrandDto>
+
+<div class="container-fluid py-5">
     <div class="row px-xl-5">
         <div class="col">
             <div class="owl-carousel vendor-carousel">
-                <div class="bg-light p-4" style="height:100px; width:150px">
-                    <img src="~/images/adidas.png" alt="">
-                </div>
-                <div class="bg-light p-4" style="height:100px; width:150px">
-                    <img src="~/images/columbia.png" alt="">
-                </div>
-                <div class="bg-light p-4" style="height:100px; width:150px">
-                    <img src="~/images/hummel.jpg" alt="">
-                </div>
-                <div class="bg-light p-4" style="height:100px; width:150px">
-                    <img src="~/images/ikea.png" alt="">
-                </div>
-                <div class="bg-light p-4" style="height:100px; width:150px">
-                    <img src="~/images/koctas.jpg" alt="">
-                </div>
-                <div class="bg-light p-4" style="height:100px; width:150px">
-                    <img src="~/images/lacoste.jpg" alt="">
-                </div>
-                <div class="bg-light p-4" style="height:100px; width:150px">
-                    <img src="~/images/nike.png" alt="">
-                </div>
+
+                @foreach (var item in Model)
+                {
+                    <div class="bg-light p-4" style="height:120px;width:150px">
+                        <img src="@item.ImageUrl" alt="">
+                    </div>
+                }
             </div>
         </div>
     </div>
