--- a/Frontends/MultiShop.WebUI/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/ProductList/ProductDetail.cshtml
@@ -38,9 +38,7 @@
 
                     @await Component.InvokeAsync("_ProductDetailInformationComponentPartial", new {id=ViewBag.x})
                     
-                    @* @await Component.InvokeAsync("_ProductDetailReviewComponentPartial", new {id=ViewBag.x}) *@
-
-                    @* @await Html.PartialAsync("~/Views/ProductList/AddComment.cshtml", new {id=Viewbag.x}) *@ @* ----> _ProductDetailReviewComponentPartial içerisinde var aynısı bunu acma *@
+                    @await Component.InvokeAsync("_ProductDetailReviewComponentPartial", new {id=ViewBag.x})
 
                 </div>
             </div>
