--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -36,7 +36,9 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Sayfalar <i class="fa fa-angle-down mt-1"></i></a>
                             <div class="dropdown-menu bg-primary rounded-0 border-0 m-0">
                                 <a href="cart.html" class="dropdown-item">Sepetim</a>
-                                <a href="checkout.html" class="dropdown-item">Ödemeler</a>
+                                <a href="checkout.html" class="dropdown-item">Ödeme</a>
+                                <a href="/Register/Index/" class="dropdown-item">Kayıt Ol</a>
+                                <a href="/Login/Index/" class="dropdown-item">Giriş Yap</a>
                             </div>
                         </div>
                         <a href="/Contact/Index/" class="nav-item nav-link">İletişim</a>
