--- a/Frontends/MultiShop.WebUI/Views/ShoppingCart/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/ShoppingCart/Index.cshtml
@@ -21,7 +21,9 @@
         
         @await Component.InvokeAsync("_ShoppingCartProductListComponentPartial")
 
-        @await Component.InvokeAsync("_ShoppingCartDiscountCouponComponentPartial")
+        @* @await Component.InvokeAsync("_ShoppingCartDiscountCouponComponentPartial") *@
+
+        @await Html.PartialAsync("~/Views/Discount/ConfirmDiscountCoupon.cshtml")
 
     </div>
 </div>
