--- a/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
@@ -13,7 +13,7 @@
         <div class="border-bottom pb-2">
             <div class="d-flex justify-content-between mb-3">
                 <h6>Toplam Ürün Fiyatı</h6>
-                <h6>$150</h6>
+                <h6>@ViewBag.total ₺</h6>
             </div>
             <div class="d-flex justify-content-between">
                 <h6 class="font-weight-medium">KDV</h6>
