--- a/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
@@ -17,13 +17,13 @@
             </div>
             <div class="d-flex justify-content-between">
                 <h6 class="font-weight-medium">KDV</h6>
-                <h6 class="font-weight-medium">$10</h6>
+                <h6 class="font-weight-medium">@ViewBag.tax ₺</h6>
             </div>
         </div>
         <div class="pt-2">
             <div class="d-flex justify-content-between mt-2">
                 <h5>Toplam</h5>
-                <h5>$160</h5>
+                <h5>@ViewBag.totalPriceWithTax ₺</h5>
             </div>
             <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Ödeme Adımına Geç</button>
         </div>
