--- a/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
@@ -23,7 +23,7 @@
         <div class="pt-2">
             <div class="d-flex justify-content-between mt-2">
                 <h5>Toplam</h5>
-                <h5>@ViewBag.totalPriceWithTax ₺</h5>
+                <h5>@ViewBag.totalNewPriceWithDiscount ₺</h5>
             </div>
             <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Ödeme Adımına Geç</button>
         </div>
