--- a/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
@@ -11,18 +11,26 @@
     <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Sepet Özeti</span></h5>
     <div class="bg-light p-30 mb-5">
         <div class="border-bottom pb-2">
-            <div class="d-flex justify-content-between mb-3">
+            <div class="d-flex justify-content-between mb-1">
                 <h6>Toplam Ürün Fiyatı</h6>
                 <h6>@ViewBag.total ₺</h6>
             </div>
-            <div class="d-flex justify-content-between">
-                <h6 class="font-weight-medium">KDV</h6>
+            <div class="d-flex justify-content-between mb-1">
+                <h6 class="font-weight-medium">Kdv Tutarı</h6>
                 <h6 class="font-weight-medium">@ViewBag.tax ₺</h6>
+            </div>
+            <div class="d-flex justify-content-between mb-1">
+                <h6 class="font-weight-medium">İndirim Oranı</h6>
+                <h6 class="font-weight-medium">% @ViewBag.discountRate</h6>
+            </div>
+            <div class="d-flex justify-content-between mb-1">
+                <h6 class="font-weight-medium">İndirimsiz Tutar</h6>
+                <h6 class="font-weight-medium">@ViewBag.totalPriceWithTax ₺</h6>
             </div>
         </div>
         <div class="pt-2">
             <div class="d-flex justify-content-between mt-2">
-                <h5>Toplam</h5>
+                <h5>İndirimli Güncel Tutar</h5>
                 <h5>@ViewBag.totalNewPriceWithDiscount ₺</h5>
             </div>
             <button class="btn btn-block btn-primary font-weight-bold my-3 py-3">Ödeme Adımına Geç</button>
