--- a/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Discount/ConfirmDiscountCoupon.cshtml
@@ -2,7 +2,7 @@
 <div class="col-lg-4">
     <form class="mb-30" asp-controller="Discount" asp-action="ConfirmDiscountCoupon" method="post">
         <div class="input-group">
-            <input type="text" name="code" class="form-control border-0 p-4" placeholder="Kupon Kodunuz">
+            <input type="text" name="code" value="@ViewBag.code" class="form-control border-0 p-4" placeholder="Kupon Kodunuz">
             <div class="input-group-append">
                 <button class="btn btn-primary">Kuponu Uygula</button>
             </div>
