--- a/Frontends/MultiShop.WebUI/Views/Order/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Order/Index.cshtml
@@ -21,55 +21,53 @@
 <!-- Breadcrumb End -->
 <!-- Checkout Start -->
 <div class="container-fluid">
-    <div class="row">
+    <div class="row px-xl-5">
         <form method="post">
             <div class="col-lg-8">
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Sipariş Teslimat ve Fatura Adresiniz</span></h5>
                 <div class="bg-light p-30 mb-5">
-                    <form method="post">
-                        <div class="row">
-                            <div class="col-md-6 form-group">
-                                <label>Adınız</label>
-                                <input class="form-control" type="text" asp-for="Name" placeholder="adınız">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>Soyadınız</label>
-                                <input class="form-control" type="text" asp-for="Surname" placeholder="soyadınız">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>E-mail Adresiniz</label>
-                                <input class="form-control" type="text" asp-for="Email" placeholder="mail@email.com">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>Telefon Numaranız</label>
-                                <input class="form-control" type="text" asp-for="Phone" placeholder="+90 123 456 78 90">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>Adres Satır 1</label>
-                                <input class="form-control" type="text" asp-for="Detail1" placeholder="123 mahallesi">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>Adres Satır 2</label>
-                                <input class="form-control" type="text" asp-for="Detail2" placeholder="123 sokak">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>Ülke</label>
-                                <input class="form-control" type="text" asp-for="Country" placeholder="Türkiye">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>Şehir</label>
-                                <input class="form-control" type="text" asp-for="City" placeholder="şehriniz">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>İlçe</label>
-                                <input class="form-control" type="text" asp-for="District" placeholder="New York">
-                            </div>
-                            <div class="col-md-6 form-group">
-                                <label>Posta Kodu</label>
-                                <input class="form-control" type="text" asp-for="ZipCode" placeholder="12345">
-                            </div>
+                    <div class="row">
+                        <div class="col-md-6 form-group">
+                            <label>Adınız</label>
+                            <input class="form-control" type="text" asp-for="Name" placeholder="adınız">
                         </div>
-                    </form>
+                        <div class="col-md-6 form-group">
+                            <label>Soyadınız</label>
+                            <input class="form-control" type="text" asp-for="Surname" placeholder="soyadınız">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>E-mail Adresiniz</label>
+                            <input class="form-control" type="text" asp-for="Email" placeholder="mail@email.com">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Telefon Numaranız</label>
+                            <input class="form-control" type="text" asp-for="Phone" placeholder="+90 123 456 78 90">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Adres Satır 1</label>
+                            <input class="form-control" type="text" asp-for="Detail1" placeholder="123 mahallesi">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Adres Satır 2</label>
+                            <input class="form-control" type="text" asp-for="Detail2" placeholder="123 sokak">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Ülke</label>
+                            <input class="form-control" type="text" asp-for="Country" placeholder="Türkiye">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Şehir</label>
+                            <input class="form-control" type="text" asp-for="City" placeholder="şehriniz">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>İlçe</label>
+                            <input class="form-control" type="text" asp-for="District" placeholder="New York">
+                        </div>
+                        <div class="col-md-6 form-group">
+                            <label>Posta Kodu</label>
+                            <input class="form-control" type="text" asp-for="ZipCode" placeholder="12345">
+                        </div>
+                    </div>
                 </div>
             </div>
 
