--- a/Frontends/MultiShop.WebUI/Views/Order/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Order/Index.cshtml
@@ -19,13 +19,14 @@
     </div>
 </div>
 <!-- Breadcrumb End -->
+
 <!-- Checkout Start -->
 <div class="container-fluid">
-    <div class="row px-xl-5">
-        <form method="post">
-            <div class="col-lg-8">
-                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Sipariş Teslimat ve Fatura Adresiniz</span></h5>
-                <div class="bg-light p-30 mb-5">
+    <div class="row">
+        <div class="col-lg-8">
+            <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Sipariş Teslimat ve Fatura Adresiniz</span></h5>
+            <div class="bg-light p-30 mb-5">
+                <form method="post">
                     <div class="row">
                         <div class="col-md-6 form-group">
                             <label>Adınız</label>
@@ -68,48 +69,20 @@
                             <input class="form-control" type="text" asp-for="ZipCode" placeholder="12345">
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
+        </div>
 
-            <div class="col-lg-4">
-                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Sipariş Özeti</span></h5>
+        <div class="col-lg-4">
+            <h5 class="section-title position-relative text-uppercase mb-3">
+                <span class="bg-secondary pr-3">Sipariş Özeti</span>
+            </h5>
 
-                @await Component.InvokeAsync("_OrderSummaryComponentPartial")
+            @await Component.InvokeAsync("_OrderSummaryComponentPartial")
 
-                @* @await Component.InvokeAsync("_PaymentMethodComponentPartial") *@
+            @await Component.InvokeAsync("_PaymentMethodComponentPartial")
 
-                <div class="mb-5">
-                    <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Ödeme Yöntemini Seçin</span></h5>
-                    <div class="bg-light p-30">
-                        <div class="form-group">
-                            <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" name="payment" id="paypal">
-                                <label class="custom-control-label" for="paypal">Paypal</label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" name="payment" id="directcheck">
-                                <label class="custom-control-label" for="directcheck">Kredi/Banka Kartı</label>
-                            </div>
-                        </div>
-                        <div class="form-group mb-4">
-                            <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" name="payment" id="banktransfer">
-                                <label class="custom-control-label" for="banktransfer">Havale/Eft</label>
-                            </div>
-                        </div>
-                        <div class="form-group mb-4">
-                            <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" name="payment" id="banktransfer">
-                                <label class="custom-control-label" for="banktransfer">Puan Kullan</label>
-                            </div>
-                        </div>
-                        <button class="btn btn-block btn-primary font-weight-bold py-3">Ödeme Adımına Geç</button>
-                    </div>
-                </div>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 <!-- Checkout End -->
